[package]
name = "bevy-nest"
version = "0.2.0"
edition = "2021"
authors = ["Danny Tatom <its.danny@hey.com>"]
description = "🪹 A telnet plugin for getting MUDdy in Bevy."
repository = "https://github.com/its-danny/bevy-nest"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "bevy", "networking", "telnet", "mud"]

[dependencies]
bevy = { version = "0.12", default-features = false }
crossbeam-channel = "0.5"
dashmap = "5.5"
thiserror = "1.0"
tokio = { version = "1.33", features = ["io-util", "net", "rt-multi-thread"] }

[dev-dependencies]
rusty-hook = "0.11"
